fixed some spacings

--- a/css/style.css
+++ b/css/style.css
@@ -112,7 +112,7 @@ header {
 
 #about-text {
   grid-area: about-text;
-  margin-left: 15px;
+  margin-left: 25px;
   margin-top: 15px;
   margin-bottom: 15px;
 }
@@ -136,8 +136,8 @@ header {
   background-image: url(../images/01-horiseon.jpg);
   background-size: cover;
   height: 150px;
-  margin-left: 15px;
-  margin-bottom: 15px;
+  margin-left: 25px;
+  margin-bottom: 25px;
 }
 
 #work-2 {
@@ -145,30 +145,30 @@ header {
   background-image: url("../images/02-portfolio-2.jpg");
   background-size: cover;
   height: 150px;
-  margin-left: 15px;
-  margin-bottom: 15px;
+  margin-left: 25px;
+  margin-bottom: 25px;
 }
 
 #work-3 {
   grid-area: work-3;
   background-image: url("../images/02-portfolio-3.jpg");
   height: 150px;
-  margin-left: 15px;
-  margin-bottom: 15px;
+  margin-left: 25px;
+  margin-bottom: 25px;
 }
 
 #work-4 {
   grid-area: work-4;
   background-image: url("../images/02-portfolio-4.jpg");
   height: 150px;
-  margin-left: 15px;
+  margin-left: 25px;
 }
 
 #work-5 {
   grid-area: work-5;
   background-image: url("../images/02-run-buddy.jpg");
   height: 150px;
-  margin-left: 15px;
+  margin-left: 25px;
 }
 
 #work-1:hover, #work-2:hover, #work-3:hover, #work-4:hover, #work-5:hover {
@@ -185,7 +185,7 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-evenly;
-  margin-left: 15px;
+  margin-left: 25px;
   margin-top: 15px;
   padding: 5px;
   flex-wrap: wrap;
